tests/snapshots/snapshots/snapshots__snapshots__json_output__search_no_match_json_output.snap
---
source: tests/snapshots/json_output.rs
expression: SnapshotJson(&normalize_json(&json))
---
{
  "issues": [],
  "hidden_closed_count": 0
}
